[package]
name = "hivesim"
version = "0.1.0"
authors = ["Ognyan Genev <ognian.genev@gmail.com>"]
edition = "2021"


[dependencies]
async-trait = "0.1.59"
dyn-clone = "1.0.11"
jsonrpc = "0.14.0"
reqwest = { version = "0.11.12", features = ["json", "multipart"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[patch.crates-io]
jsonrpc = { git = "https://github.com/apoelstra/rust-jsonrpc.git", branch = "master" }
