[package]
name = "rpc-compat"
version = "0.1.0"
authors = ["Ognyan Genev <ognian.genev@gmail.com>"]
edition = "2021"

[dependencies]
ethportal-api = { git = "https://github.com/ethereum/trin" }
hivesim = { path = "../../hivesim-rs" }
futures = "0.3.25"
serde_json = "1.0.87"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1", features = ["full"] }
