[package]
name = "testnet"
version = "0.1.0"
authors = ["Ognyan Genev <ognian.genev@gmail.com>"]
edition = "2021"

[lib]
name = "testnet"
path = "src/lib.rs"

[[bin]]
name = "testnet"
path = "src/main.rs"

[dependencies]
jsonrpc = "0.14.0"
futures = "0.3.25"
reqwest = { version = "0.11.12", features = ["json", "multipart"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1", features = ["full"] }
